[package]
name = "ethpm"
version = "0.1.0-alpha.1"
authors = ["Bryant Eisenbach <fubuloubu@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust library for EthPM package manifest and registry operations"
homepage = "https://ethpm.github.io/ethpm-spec/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
glob = "0.3.0"
