[package]
name = "ethpm"
version = "0.1.0-alpha.2"
authors = ["Bryant Eisenbach <fubuloubu@gmail.com>","Sean Coughlin <sean@froth.com>"]
edition = "2018"
license = "MIT"
description = "Rust library for EthPM package manifest and registry operations"
homepage = "https://ethpm.github.io/ethpm-spec/"
repository = "https://github.com/ethpm/ethpm-rs"

[features]
default = ["serde", "serde_json"]
# enable support for the standard library
std = ["serde", "serde_json"]
no-std = ["serde-json-core"]

[dependencies]
clap = { version = "2.33" }
serde = { version = "1.0.80", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-json-core = { version = "0.0.1", optional = true }

[dev-dependencies]
paste = "0.1"
web3 = { path = "rust-web3/", version = "0.7.0" }
assert_cmd = "0.10"
predicates = "1"
tempfile = "3.1.0"

[[bin]]
name = "ethpm"
